--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ trim_trailing_whitespace = true
 
 # Go files
 [*.go]
-indent_style = space
+indent_style = tab
 indent_size = 2
 max_line_length = 120
 
